apps/recipe-next/manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 1.0.0beta-5
  name: frontend
  namespace: recipe-next
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: mealie
        app.kubernetes.io/version: 1.0.0beta-5
    spec:
      containers:
      - env:
        - name: API_URL
          value: http://api.recipe-next.svc:9000
        image: hkotel/mealie:frontend-v1.0.0beta-5
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 3000
          name: http
        resources: {}
        volumeMounts:
        - mountPath: /app/data
          name: appdata
      restartPolicy: Always
      serviceAccountName: frontend
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: data
