apps/recipe-next/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 1.0.0beta-5
  name: frontend
  namespace: recipe-next
spec:
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: mealie
