apps/recipe-next/manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 2M
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 1.0.0beta-5
  name: frontend
  namespace: recipe-next
spec:
  rules:
  - host: recipe-next.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - recipe-next.ankhmorpork.thaum.xyz
    secretName: frontend-tls
